Coding-Question2/alb.tf
resource "aws_lb" "test" {
  name               = "test-lb-tf"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [
    aws_security_group.alb_sg.id
]
  subnets            = [for subnet in aws_subnet.public : subnet.id]

  enable_deletion_protection = true

  tags = {
    Environment = var.env
    "kubernetes.io/role/elb" = "1"
    "ALB" = "external"
  }
}

# todo: cert
